Fix article alignment

--- a/static/css/checker.css
+++ b/static/css/checker.css
@@ -4,6 +4,11 @@
 .box__file,
 .box__error {
   display: none;
+  padding-top: 20%;
+}
+
+.box__input {
+  padding-top: 20%;
 }
 
 .box {
@@ -15,7 +20,6 @@
 
 div {
   text-align: center;
-  padding-top: 20%;
 }
 
 .box__uploading,
